--- a/app/views/psd-revised-flow/case-status/inc_businesses-pgs-breadcrumbs-team.html
+++ b/app/views/psd-revised-flow/case-status/inc_businesses-pgs-breadcrumbs-team.html
@@ -4,7 +4,10 @@
       <a class="govuk-breadcrumbs__link" href="home">Home</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="new-products-example_your_products-new">Products</a>
+      <a class="govuk-breadcrumbs__link" href="new-businesses-example_your_businesses-new">Businesses</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="new-businesses-example_team_businesses-new">Team businesses</a>
     </li>
   </ol>
 </nav>
