--- a/app/views/psd-revised-flow/case-status/new-cases-example_all_cases-new.html
+++ b/app/views/psd-revised-flow/case-status/new-cases-example_all_cases-new.html
@@ -68,10 +68,13 @@ All cases - Search
             <nav aria-label="Secondary">
                 <ul class="govuk-list opss-left-nav">
                     <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">Your cases</a>
+                        <a href="new-cases-example_your_cases-new" class="govuk-link govuk-link--no-visited-state">Your cases</a>
                     </li>
                     <li>
-                        <a href="new-cases-example_your_and_team.html" class="govuk-link govuk-link--no-visited-state">Team cases</a>
+                        <a href="new-cases-example_team_cases-new" class="govuk-link govuk-link--no-visited-state">Team cases</a>
+                    </li>
+                    <li>
+                        <a href="new-cases-example_assigned_cases-new" class="govuk-link govuk-link--no-visited-state">Assigned cases</a>
                     </li>
                     <li class="opss-left-nav__active">
                         <a href="#" class="govuk-link govuk-link--no-visited-state" aria-current="page">All cases &ndash; Search</a>
@@ -608,43 +611,74 @@ All cases - Search
                             </tr>
                         </thead>
                         <tbody class="govuk-table__body">
+
+                        <tbody class="govuk-table__body">
                             <tr class="govuk-table__row">
                                 <th class="govuk-visually-hidden">
                                     Case title
                                 </th>
-                                <th id="item-1" colspan="4" scope="colgroup" class="govuk-table__header">
-                                    <a href="#" class="govuk-link govuk-link--no-visited-state">Hair bleach TM, Hair bleach – chemical hazard</a>
+                                <th id="item-2" colspan="4" scope="colgroup" class="govuk-table__header">
+                                    <a href="page-all-case-page" class="govuk-link govuk-link--no-visited-state">Boots hand cream (Select this item as an example)</a>
                                 </th>
                             </tr>
                             <tr class="govuk-table__row">
-                                <th headers="item-1" id="meta-1" class="govuk-visually-hidden">
+                                <th headers="item-2" id="meta-2" class="govuk-visually-hidden">
                                     Metadata
                                 </th>
-                                <td headers="allegation item-1 meta-1" class="govuk-table__cell">
-                                    2021-11
+                                <td headers="allegation item-2 meta-2" class="govuk-table__cell">
+                                    20-2120
                                 </td>
-                                <td headers="caseowner item-1 meta-1" class="govuk-table__cell">
-                                    David Willis
+                                <td headers="caseowner item-2 meta-2" class="govuk-table__cell">
+                                    OPSS Enforcement
                                 </td>
-                                <td headers="haztype item-1 meta-1" class="govuk-table__cell">
+                                <td headers="haztype item-2 meta-2" class="govuk-table__cell">
                                     lorem ipusm
                                 </td>
-                                <td headers="updated item-1 meta-1" class="govuk-table__cell">
-                                    about 6 hours ago
+                                <td headers="updated item-2 meta-2" class="govuk-table__cell">
+                                    about 2 months ago
                                 </td>
                             </tr>
                             <tr class="govuk-table__row">
-                                <th headers="item-1" id="status-01" class="govuk-visually-hidden">
+                                <th headers="item-2" id="status-02" class="govuk-visually-hidden">
                                     Type
                                 </th>
-                                <td headers="item-1 status-01" colspan="4" class="govuk-table__cell">
+                                <td headers="item-2 status-02" colspan="4" class="govuk-table__cell">
                                     <span class="opss-tag opss-tag--std">Allegation</span>
                                     <span class="govuk-visually-hidden"> | </span>
-                                    <span class="opss-tag opss-tag--risk1">Serious risk case</span>
-                                    <span class="govuk-visually-hidden"> | </span>
-                                    <span class="opss-tag opss-tag--risk2">Restricted case</span>
+                                    <span class="opss-tag opss-tag--covid">COVID-19 related case</span>
                                 </td>
                             </tr>
+                        </tbody>
+
+                        <tr class="govuk-table__row">
+                            <th headers="item-1" id="meta-1" class="govuk-visually-hidden">
+                                Metadata
+                            </th>
+                            <td headers="allegation item-1 meta-1" class="govuk-table__cell">
+                                2021-11
+                            </td>
+                            <td headers="caseowner item-1 meta-1" class="govuk-table__cell">
+                                David Willis
+                            </td>
+                            <td headers="haztype item-1 meta-1" class="govuk-table__cell">
+                                lorem ipusm
+                            </td>
+                            <td headers="updated item-1 meta-1" class="govuk-table__cell">
+                                about 6 hours ago
+                            </td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <th headers="item-1" id="status-01" class="govuk-visually-hidden">
+                                Type
+                            </th>
+                            <td headers="item-1 status-01" colspan="4" class="govuk-table__cell">
+                                <span class="opss-tag opss-tag--std">Allegation</span>
+                                <span class="govuk-visually-hidden"> | </span>
+                                <span class="opss-tag opss-tag--risk1">Serious risk case</span>
+                                <span class="govuk-visually-hidden"> | </span>
+                                <span class="opss-tag opss-tag--risk2">Restricted case</span>
+                            </td>
+                        </tr>
                         </tbody>
 
                         <tbody class="govuk-table__body">
@@ -653,7 +687,7 @@ All cases - Search
                                     Case title
                                 </th>
                                 <th id="item-2" colspan="4" scope="colgroup" class="govuk-table__header">
-                                    <a href="#" class="govuk-link govuk-link--no-visited-state">And another product title here</a>
+                                    <a href="#" class="govuk-link govuk-link--no-visited-state">Dyson hand dryer</a>
                                 </th>
                             </tr>
                             <tr class="govuk-table__row">
