--- a/app/views/psd-revised-flow/case-status/new-cases-example_team_cases-new.html
+++ b/app/views/psd-revised-flow/case-status/new-cases-example_team_cases-new.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
-Your cases
+Team cases
 {% endblock %}
 
 
@@ -15,17 +15,17 @@ Your cases
     <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-            Your cases
+            Team cases
         </h1>
 
         <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-1">
-            You are the case owner of 9 open cases.
+            The Renfrewshire Council team are the case owners of 9 open cases.
         </p>
 
     </div>
     <div class="govuk-grid-column-one-third">
         <div class="opss-text-align-right govuk-!-margin-bottom-8">
-            <a href="find-the-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Create a case
             </a>
         </div>
@@ -42,14 +42,17 @@ Your cases
 
         <nav aria-label="Secondary">
             <ul class="govuk-list opss-left-nav">
+                <li>
+                    <a href="new-cases-example_your_cases-new" class="govuk-link govuk-link--no-visited-state">Your cases</a>
+                </li>
                 <li class="opss-left-nav__active">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state" aria-current="page">Your cases</a>
+                    <a href="new-cases-example_team_cases-new" class="govuk-link govuk-link--no-visited-state" aria-current="page">Team cases</a>
                 </li>
                 <li>
-                    <a href="#" class="govuk-link govuk-link--no-visited-state">Team cases</a>
+                    <a href="new-cases-example_assigned_cases-new" class="govuk-link govuk-link--no-visited-state">Assigned cases</a>
                 </li>
                 <li>
-                    <a href="new-cases-example_all.html" class="govuk-link govuk-link--no-visited-state">All cases &ndash; Search</a>
+                    <a href="new-cases-example_all_cases-new" class="govuk-link govuk-link--no-visited-state">All cases &ndash; Search</a>
                 </li>
             </ul>
         </nav>
@@ -121,7 +124,7 @@ Your cases
                                 Case title
                             </th>
                             <th id="item-1" colspan="4" scope="colgroup" class="govuk-table__header">
-                                <a href="#" class="govuk-link govuk-link--no-visited-state">Hair bleach TM, Hair bleach - chemical hazard</a>
+                                <a href="page-team-case-page" class="govuk-link govuk-link--no-visited-state">Asda hair bleach (Select this item as an example)</a>
                             </th>
                         </tr>
                         <tr class="govuk-table__row">
