--- a/app/views/psd-revised-flow/case-status/new-products-example_all_products-new.html
+++ b/app/views/psd-revised-flow/case-status/new-products-example_all_products-new.html
@@ -42,7 +42,7 @@ All products - Search
 
   <div class="govuk-grid-column-one-third">
     <div class="opss-text-align-right govuk-!-margin-bottom-8">
-      <a href="psd-revised-flow/create-a-product-record.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+      <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
         Create a product record
       </a>
     </div>
@@ -58,13 +58,13 @@ All products - Search
       <nav aria-label="Secondary">
         <ul class="govuk-list opss-left-nav">
           <li>
-            <a class="govuk-link govuk-link--no-visited-state" href="new-products-example_your_and_team.html">Your products</a>
+            <a class="govuk-link govuk-link--no-visited-state" href="new-products-example_your_products-new">Your products</a>
           </li>
           <li>
-            <a class="govuk-link govuk-link--no-visited-state" href="#">Team products</a>
+            <a class="govuk-link govuk-link--no-visited-state" href="new-products-example_team_products-new">Team products</a>
           </li>
           <li class="opss-left-nav__active">
-            <a class="govuk-link govuk-link--no-visited-state" aria-current="page" href="#">All products - Search</a>
+            <a class="govuk-link govuk-link--no-visited-state" aria-current="page" href="new-products-example_all_products-new">All products - Search</a>
           </li>
         </ul>
       </nav>
@@ -218,6 +218,34 @@ All products - Search
                 <th id="counterfeit" scope="col" class="govuk-table__header">Counterfeit</th>
               </tr>
             </thead>
+
+            <tbody class="govuk-table__body">
+              <tr class="govuk-table__row">
+                <th class="govuk-visually-hidden">
+                  Product
+                </th>
+                <th id="item-1" colspan="4" scope="colgroup" class="govuk-table__header">
+                  <a href="page-all-products-page" class="govuk-link govuk-link--no-visited-state">Asda dishwashing liquid (Select this item as an example)</a>
+                </th>
+              </tr>
+              <tr class="govuk-table__row">
+                <th headers="item-1" id="meta-1" class="govuk-visually-hidden">
+                  Metadata
+                </th>
+                <td headers="psdref item-1 meta-1" class="govuk-table__cell opss-no-wrap">
+                  psd-9873
+                </td>
+                <td headers="cat item-1 meta-1" class="govuk-table__cell">
+                  Electrical
+                </td>
+                <td headers="prodtype item-1 meta-1" class="govuk-table__cell">
+                  Electrical appliance
+                </td>
+                <td headers="counterfeit item-1 meta-1" class="govuk-table__cell">
+                  No
+                </td>
+              </tr>
+            </tbody>
 
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
