--- a/app/views/psd-revised-flow/case-status/new-products-example_breadcrumbs-inside-main.html
+++ b/app/views/psd-revised-flow/case-status/new-products-example_breadcrumbs-inside-main.html
@@ -186,7 +186,7 @@
                 <a href="#" class="govuk-link govuk-link--no-visited-state">Team cases</a>
               </li>
               <li>
-                <a href="new-cases-example_all.html" class="govuk-link govuk-link--no-visited-state">All cases &ndash; Search</a>
+                <a href="#" class="govuk-link govuk-link--no-visited-state">All cases &ndash; Search</a>
               </li>
             </ul>
           </nav>
