--- a/app/views/layout-psd-menu_home.html
+++ b/app/views/layout-psd-menu_home.html
@@ -102,13 +102,13 @@
             <a class="psd-header__link" href="#">Home</a>
           </li>
           <li class="psd-header__navigation-item">
-            <a class="psd-header__link" href="#">Cases</a>
+            <a class="psd-header__link" href="new-cases-example_your_cases-new">Cases</a>
           </li>
           <li class="psd-header__navigation-item ">
-            <a class="psd-header__link" href="#">Businesses</a>
+            <a class="psd-header__link" href="new-businesses-example_your_businesses-new">Businesses</a>
           </li>
-          <li class="psd-header__navigation-item ">
-            <a class="psd-header__link" href="#">Products</a>
+          <li class="psd-header__navigation-item">
+            <a class="psd-header__link" href="new-products-example_your_products-new">Products</a>
           </li>
           <li class="psd-header__navigation-item psd-header__navigation-item--right">
             <a class="psd-header__link" href="#">Your team</a>
