--- a/app/views/psd-revised-flow/case-status/inc_cases-pgs-breadcrumbs-all.html
+++ b/app/views/psd-revised-flow/case-status/inc_cases-pgs-breadcrumbs-all.html
@@ -4,7 +4,10 @@
       <a class="govuk-breadcrumbs__link" href="home">Home</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="new-products-example_your_products-new">Products</a>
+      <a class="govuk-breadcrumbs__link" href="new-cases-example_your_cases-new.html">Cases</a>
+    </li>
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="new-cases-example_all_cases-new">All cases &ndash; search</a>
     </li>
   </ol>
 </nav>
