--- a/app/views/psd-revised-flow/case-status/inc_products-pgs-breadcrumbs-all.html
+++ b/app/views/psd-revised-flow/case-status/inc_products-pgs-breadcrumbs-all.html
@@ -6,5 +6,8 @@
     <li class="govuk-breadcrumbs__list-item">
       <a class="govuk-breadcrumbs__link" href="new-products-example_your_products-new">Products</a>
     </li>
+    <li class="govuk-breadcrumbs__list-item">
+      <a class="govuk-breadcrumbs__link" href="new-products-example_all_products-new">All products &ndash; search</a>
+    </li>
   </ol>
 </nav>
