Removed Other option

--- a/app/views/psd-revised-flow/case-status-2/new-cases-example_all_cases-new.html
+++ b/app/views/psd-revised-flow/case-status-2/new-cases-example_all_cases-new.html
@@ -643,7 +643,7 @@ All cases - Search
                                 </legend>
 
                                 <div class="govuk-hint govuk-!-font-size-16 govuk-!-margin-top-1" id="filters-assigned">
-                                    Filter the search results to only include cases where a team has been added to the case.
+                                    Filter the search results to only include cases where a specific team has been added to the case.
                                 </div>
 
                                 <div class="govuk-radios govuk-radios--inline govuk-radios--small govuk-!-margin-top-3" data-module="govuk-radios">
@@ -845,7 +845,7 @@ All cases - Search
                                 </legend>
 
                                 <div class="govuk-hint govuk-!-font-size-16 govuk-!-margin-top-1" id="case-type">
-                                    Legacy cases can be filtered by their case type.
+                                    Some historic cases can be filtered by their case type. (These will typically be closed cases).
                                 </div>
 
                                 <div class="govuk-radios govuk-radios--inline govuk-radios--small govuk-!-margin-top-3">
@@ -900,11 +900,11 @@ All cases - Search
                                 <div class="govuk-form-group">
                                     <fieldset class="govuk-fieldset opss-grouping" aria-describedby="sorting-order">
                                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--s opss-grouping__legend--s opss-grouping__heading--norm">
-                                            Sorting order
+                                            Ordering
                                         </legend>
 
                                         <div class="govuk-hint govuk-!-font-size-16 govuk-!-margin-top-1" id="sorting-order">
-                                            Sort the ordering of how the search results will be displayed.
+                                            Order how the search results will be displayed.
                                         </div>
 
                                         <div class="govuk-radios govuk-radios--small govuk-!-margin-top-3">
