--- a/app/views/psd-revised-flow/online-sales/type-of-business-error-main.html
+++ b/app/views/psd-revised-flow/online-sales/type-of-business-error-main.html
@@ -82,7 +82,7 @@ href: "/cases/2303-0044"
               <label class="govuk-label govuk-radios__label" for="business_type_distributor">Distributor</label>
             </div>
 
-            <!-- other starts -->
+            <!-- other starts 
             <div class="govuk-radios__item">
               <input id="business_type_other" name="business[type]" type="radio" value="other" class="govuk-radios__input" data-aria-controls="conditional-business_type_other_name">
               <label class="govuk-label govuk-radios__label" for="business_type_other">Other</label>
@@ -93,7 +93,7 @@ href: "/cases/2303-0044"
                 <input class="govuk-input govuk-!-width-three-quarters" id="business_type_other_name" name="business[type_other]" type="text">
               </div>
             </div>
-            <!-- other ends -->
+            other ends -->
 
           </div>
 
