--- a/app/views/psd-revised-flow/online-sales/type-of-business-error.html
+++ b/app/views/psd-revised-flow/online-sales/type-of-business-error.html
@@ -78,7 +78,7 @@ href: "/cases/2303-0044"
               <label class="govuk-label govuk-radios__label" for="business_type_distributor">Distributor</label>
             </div>
 
-            <!-- other starts -->
+            <!-- other starts 
 
             <div class="govuk-radios__item">
               <input id="business_type_other" name="business[type]" type="radio" value="other" class="govuk-radios__input" data-aria-controls="conditional-business_type_other_name" checked>
@@ -95,7 +95,7 @@ href: "/cases/2303-0044"
                 <input class="govuk-input govuk-!-width-three-quarters" id="business_type_other_name" name="business[type_other_name]" type="text" aria-describedby="business_type_other_name-error">
               </div>
             </div>
-            <!-- other ends -->
+            other ends -->
 
           </div>
 
