--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -1304,6 +1304,31 @@ dd dl.opss-nested-definition-list {
     &.govuk-grid-column-one-half .govuk-select {
       width: 100%;
     }
+
+    body:not(.js-enabled) & {
+      .govuk-radios--inline.govuk-radios--small:last-child {
+        .govuk-radios__item input[data-aria-controls] + .govuk-radios__label {  
+          background-color: govuk-colour("light-grey");
+          padding-left: 45px; 
+          margin-left: - 40px; 
+
+          &:before {
+            left: 5px;
+          }
+
+          &:after {
+            left: 12px;
+          } 
+        } 
+        
+        .govuk-radios__conditional {
+          width: fit-content; 
+          background-color: govuk-colour("light-grey"); 
+          padding: 0 govuk-spacing(2) govuk-spacing(2) govuk-spacing(2); 
+        }
+
+      }
+    }
   }
 }
 
