search pages wip

--- a/app/views/psd-revised-flow/case-status-2/all_cases-new-results.html
+++ b/app/views/psd-revised-flow/case-status-2/all_cases-new-results.html
@@ -55,6 +55,13 @@ All cases - search results
       </ul>
     </nav>
 
+    <div class="govuk-!-padding-top-2 govuk-!-padding-right-0 govuk-!-padding-bottom-1 govuk-!-padding-left-3 govuk-!-margin-bottom-3 opss-desktop-margin-bottom-220px opss-full-height__col--bottom opss-right-box-arrow">
+      <p class="govuk-body govuk-!-padding-bottom-1 govuk-!-margin-bottom-0 govuk-!-font-size-14">
+        Request this list as a downloadable <br class="opss-br-desktop">
+        <a class="govuk-link govuk-link--no-visited-state" href="/case_exports/generate"><abbr title="Microsoft Excel Open XML Format Spreadsheet">XLSX</abbr> (spreadsheet)</a> file.
+      </p>
+    </div>
+
   </section>
 
   <!-- ********* results section starts ************ -->
