--- a/app/views/psd-revised-flow/duplicates/do-you-have-the-barcode-error-1.html
+++ b/app/views/psd-revised-flow/duplicates/do-you-have-the-barcode-error-1.html
@@ -52,7 +52,7 @@ href: "index"
             <span class="govuk-visually-hidden">Error:</span> Select yes if you have the product barcode number
           </p>
 
-          <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1 govuk-radios--conditional" data-module="govuk-radios">
+          <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1" data-module="govuk-radios">
 
             <div class="govuk-radios__item">
 
