--- a/app/views/psd-revised-flow/duplicates/do-you-have-the-barcode-error-2.html
+++ b/app/views/psd-revised-flow/duplicates/do-you-have-the-barcode-error-2.html
@@ -48,7 +48,7 @@ href: "index"
 
           </legend>
 
-          <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1 govuk-radios--conditional" data-module="govuk-radios">
+          <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1" data-module="govuk-radios">
 
             <div class="govuk-radios__item">
 
