--- a/app/views/psd-revised-flow/case-status-2/all_cases-new-results.html
+++ b/app/views/psd-revised-flow/case-status-2/all_cases-new-results.html
@@ -13,7 +13,7 @@ All cases - search results
   <div class="govuk-grid-column-two-thirds opss-desktop-min-height--s">
 
     <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-      All cases - search results
+      All cases &ndash; search results
     </h1>
 
     <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-1 govuk-visually-hidden">
@@ -23,9 +23,12 @@ All cases - search results
   </div>
   <div class="govuk-grid-column-one-third">
     <div class="opss-text-align-right">
-      <a href="new-cases-example_all_cases-new.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-        Search again
+      <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+        Create a case
       </a>
+      <!--a href="new-cases-example_all_cases-new.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+        Search again
+      </a-->
     </div>
   </div>
 </div>
@@ -50,7 +53,7 @@ All cases - search results
           <a href="new-cases-example_assigned_cases-new" class="govuk-link govuk-link--no-visited-state">Assigned cases</a>
         </li>
         <li class="opss-left-nav__active">
-          <a href="#" class="govuk-link govuk-link--no-visited-state" aria-current="page">All cases &ndash; Search</a>
+          <a href="new-cases-example_all_cases-new" class="govuk-link govuk-link--no-visited-state" aria-current="page">All cases &ndash; Search</a>
         </li>
       </ul>
     </nav>
